--- a/Admin-Portal/index.html
+++ b/Admin-Portal/index.html
@@ -13,8 +13,8 @@
    <div class="col-sm-4" >
       
     </div>
-<div class="col-sm-4" style="background-color:pink;">
-<form >
+<div class="col-sm-4" style="background-color:lightblue;">
+<form style="text-align:center;">
   <div class="form-group">
     <label for="email">Email address:</label>
     <input type="email" class="form-control" id="email">
@@ -23,7 +23,7 @@
     <label for="pwd">Password:</label>
     <input type="password" class="form-control" id="pwd">
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button  type="submit" class="btn btn-default">Submit</button>
 </form>
 </div>
  <div class="col-sm-4" >
