--- a/Admin-Portal/index.html
+++ b/Admin-Portal/index.html
@@ -14,14 +14,14 @@
       
     </div>
 <div class="col-sm-4" style="background-color:lightblue;">
-<form style="text-align:center;">
+<form style="text-align:center;" action="login.php" method="post">
   <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email">
+    <label for="email">Username:</label>
+    <input  class="form-control" name="username">
   </div>
   <div class="form-group">
     <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd">
+    <input type="password" class="form-control" name="password">
   </div>
   <button  type="submit" class="btn btn-default">Submit</button>
 </form>
